<resources>
    <string name="app_name">Final Research</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account ? </string>
    <string name="please_sign_in_to_continue">Please Sign in to continue</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="name_with_initials">Name (with initials)</string>
    <string name="nic">NIC</string>
    <string name="mobile_number_07xxxxxxxx">Mobile Number (07XXXXXXXX)</string>
    <string name="employee_id">Employee ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="reset_password">Reset password</string>
    <string name="send_email">Send Email</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters</string>
    <string name="both_password_must_match">Both password must match</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="farmer_list">Farmer list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
</resources>