<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ddddd"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35sp"
            android:layout_marginEnd="35sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/please_sign_in_to_continue"
            android:layout_marginStart="35sp"
            android:textStyle="bold"
            android:layout_marginEnd="35sp"
            android:textColor="#A4A4A4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35sp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="35sp"
            app:cardCornerRadius="5sp"
            app:cardElevation="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="5sp"
                    android:hint="@string/email"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="35sp"
            app:cardCornerRadius="5sp"
            app:cardElevation="4dp">

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/password"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/activity_login_tv_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="35sp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd" />

        <LinearLayout
            android:id="@+id/activity_login_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="225sp"
            android:layout_marginTop="45sp"
            android:layout_marginEnd="35sp"
            android:background="@drawable/button_background"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight=".5"
                android:text="@string/sign_in"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1.5"
                android:background="@drawable/ic_baseline_arrow_forward_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="30sp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/activity_login_tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/button_three"
                android:text="@string/sign_up"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>