<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ForgetPasswordActivity">

    <LinearLayout
        android:id="@+id/forgetPassword_activity_lv"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="Back"
            android:textStyle="bold"
            android:layout_marginStart="2dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35sp"
        android:layout_marginEnd="35sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:text="Enter the email associated with your account and we'll send an email with instruction to reset your password"
        android:layout_marginStart="35sp"
        android:textStyle="bold"
        android:layout_marginEnd="35sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#A4A4A4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="35sp"
        app:cardCornerRadius="5sp"
        app:cardElevation="4dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_forget_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="sans-serif-condensed-medium"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="5sp"
                android:hint="@string/email"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/activity_forget_login_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="225sp"
        android:layout_marginTop="45sp"
        android:layout_marginEnd="35sp"
        android:background="@drawable/button_background"
        android:orientation="horizontal"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight=".5"
            android:text="@string/send"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1.5"
            android:background="@drawable/ic_baseline_arrow_forward_24" />

    </LinearLayout>

</LinearLayout>